Fix Regex DDoS in pattern matching
Also update Gradle, JUnit, etc...